# EMAT_ENGM

./: README.md  setup.cfg
src/mypackage/: main.py
