[metadata]
name = emat_engm
version = 0.0.1
author = EMAT ENGM TEAM By Ismail ISMAIL ISMAILI ALAOUI
author_email = ismaili.alaoui98@gmail.com
description = Emat_engm library to support the daily analysis of the team 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.psa-cloud.com/sd50650/emat_engm/
project_urls =
    Bug Tracker = https://github.psa-cloud.com/sd50650/emat_engm/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
